--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,17 @@
             <artifactId>log4j-core</artifactId>
             <version>2.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.2</version>
+        </dependency>
     </dependencies>
     <properties>
         <aspectj.version>1.8.11</aspectj.version>
